--- a/index.html
+++ b/index.html
@@ -265,6 +265,29 @@
                 >Project Link</a
               >
             </div>
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="assets\png\21ZzpgClpiL.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">FlappyBird</h3>
+              <p class="projects__row-content-desc">
+                I Made Flappy Bird Game It's Just Like Original Flappy Bird. <br> Controlling Bird And Avoiding Green Columns, Beating High Score.
+              </p>
+              <a
+                href="https://ghost1121.itch.io/zombocalypse-zero"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Project Link</a
+              >
+              
+            </div>
+            
           </div>
         </div>
       </div>
