--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 I Made Flappy Bird Game It's Just Like Original Flappy Bird. <br> Controlling Bird And Avoiding Green Columns, Beating High Score.
               </p>
               <a
-                href="https://ghost1121.itch.io/zombocalypse-zero"
+                href=""
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Project Link</a
