--- a/index.html
+++ b/index.html
@@ -145,9 +145,12 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            I'm a 20-year-old Unity developer. I graduated from IT Step Academy. I work mainly on 2D and 3D games. I write code and organize mechanics for the game. I have worked on several projects such as 2D platformer and endless running project names are Rush Runner and Davayumbare I have 1 year of experience in Unity and C# programming language as well as frame by frame animation in Unity and making some skeleton animations
-          </span>
-        </h2>
+            Passionate Game Developer with expertise in Unity Engine and C# programming, 
+            specializing in PC and mobile game development. With over a year of hands-on experience in Unity, I have developed a strong foundation in game mechanics, AI systems, and immersive 
+            gameplay experiences. My diverse skill set extends beyond programming to include audio manipulation, 
+            visual effects, and technical problem-solving.
+            
+
         <div class="about__content">
           <div class="about__content-main">
             <h3 class="about__content-title">Get to know me!</h3>
@@ -297,17 +300,17 @@
       <div class="projects__row">
         <div class="projects__row-img-cont">
           <img
-            src="assets\png\Zero-G poster.png"
+            src="assets\png\ChatGPT Image Sep 28, 2025, 12_11_21 AM.png"
             alt="Software Screenshot"
             class="projects__row-img"
             loading="lazy"
           />
         </div>
       <div class="projects__row-content">
-        <h3 class="projects__row-content-title">Zero-G</h3>
+        <h3 class="projects__row-content-title">Wave Hunt</h3>
         <p class="projects__row-content-desc">
          
-          I'm making Endless Shooter Game Named Zero-G Your Goal Is To Destroy Space Ships And Update Your Score... <br> Game's Still In Development You Can See Little Gameplay... <br> Click View GamePlay Button To See...
+          I'm making Top-Down Game Named Wave Hunt Almost Done...
         </p>
         <a
           href="https://streamable.com/cot4eh"
